problem with ball flying overhead

--- a/app/index.html
+++ b/app/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="screensaver-container">
-        <canvas id="golfCanvas"></canvas>
-        <div class="controls">
+        <canvas id="golfCanvas"></canvas>        <div class="controls">
             <button id="regenerateBtn">Generate New Hole</button>
+            <button id="launchBallBtn">Launch Ball</button>
             <div class="info">
                 <span id="holeInfo">Hole 1 - Par 3</span>
+                <span id="ballStatus">Ball: Ready</span>
             </div>
         </div>
     </div>
