--- a/app/index.html
+++ b/app/index.html
@@ -6,16 +6,8 @@
     <title>Golf Course Screensaver</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <div class="screensaver-container">
-        <canvas id="golfCanvas"></canvas>        <div class="controls">
-            <button id="regenerateBtn">Generate New Hole</button>
-            <button id="launchBallBtn">Launch Ball</button>
-            <div class="info">
-                <span id="holeInfo">Hole 1 - Par 3</span>
-                <span id="ballStatus">Ball: Ready</span>
-            </div>
-        </div>
+<body>    <div class="screensaver-container">
+        <canvas id="golfCanvas"></canvas>
     </div>
     
     <script src="js/utils.js"></script>
