implemented full screen

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,14 @@
     <title>Golf Course Screensaver</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>    <div class="screensaver-container">
+<body>
+    <div class="screensaver-container">
         <canvas id="golfCanvas"></canvas>
+    </div>
+    
+    <!-- Fullscreen hint (auto-hides after a few seconds) -->
+    <div id="fullscreenHint" class="fullscreen-hint">
+        🖥️ Click anywhere, press F11, or ESC to toggle fullscreen
     </div>
     
     <script src="js/utils.js"></script>
