changes to full screen functionality.

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,10 @@
 <body>    <div class="screensaver-container">
         <canvas id="golfCanvas"></canvas>
     </div>
-    
-    <!-- Persistent fullscreen message (shows when not in fullscreen) -->
-    <div id="fullscreenMessage" class="fullscreen-message">
-        Click anywhere to enable fullscreen
-    </div>
+      <!-- Persistent fullscreen button (shows when not in fullscreen) -->
+    <button id="fullscreenButton" class="fullscreen-button">
+        Enable fullscreen
+    </button>
     
     <script src="js/utils.js"></script>
     <script src="js/canvas.js"></script>
