refactored into multiple files

--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,12 @@
     <button id="fullscreenButton" class="fullscreen-button">
         Enable fullscreen
     </button>
-    
-    <script src="js/utils.js"></script>
+      <script src="js/utils.js"></script>
     <script src="js/canvas.js"></script>
+    <script src="js/course-generator.js"></script>
+    <script src="js/animation-manager.js"></script>
+    <script src="js/physics-engine.js"></script>
+    <script src="js/course-renderer.js"></script>
     <script src="js/golf-course.js"></script>
     <script src="js/main.js"></script>
 </body>
